--- a/project/HindiVowelClassification.ipynb
+++ b/project/HindiVowelClassification.ipynb
@@ -35,6 +35,8 @@
       },
       "source": [
         "import os\n",
+        "import shutil\n",
+        "from zipfile import ZipFile\n",
         "from PIL import Image\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
@@ -49,6 +51,7 @@
         "from torchvision import datasets\n",
         "import torchvision.transforms as transforms\n",
         "from tqdm import tqdm_notebook\n",
+        "import copy\n",
         "train_on_gpu = torch.cuda.is_available()"
       ],
       "execution_count": 0,
@@ -62,12 +65,22 @@
         "colab": {}
       },
       "source": [
-        "%%capture\n",
-        "os.environ['KAGGLE_USERNAME'\n",
-        "] = \"xxxxxxxx\" # username from the json file\n",
-        "os.environ['KAGGLE_KEY'\n",
-        "] = \"xxxxxxxxxxxxx\" # key from the json file\n",
-        "!kaggle competitions download -c padhai-hindi-vowel-consonant-classification # api copied from kaggle"
+        "if 'dataset' not in os.listdir():\n",
+        "    os.environ['KAGGLE_USERNAME'] = \"arohanajit232\" # username from the json file\n",
+        "    os.environ['KAGGLE_KEY'] = \"5289e13af33762d697c1d3c18c444f52\" # key from the json file\n",
+        "    os.system('kaggle competitions download -c padhai-hindi-vowel-consonant-classification')\n",
+        "    with ZipFile('test.zip', 'r') as zipObj:\n",
+        "        zipObj.extractall()\n",
+        "    with ZipFile('train.zip', 'r') as zipObj:\n",
+        "        zipObj.extractall()\n",
+        "    os.mkdir('dataset')\n",
+        "    shutil.move('train','dataset/')\n",
+        "    shutil.move('test','dataset/')\n",
+        "    os.remove('train.zip')\n",
+        "    os.remove('test.zip')\n",
+        "    print(os.listdir(\"dataset\"))\n",
+        "else:\n",
+        "    print(\"Dataset already present!\",os.listdir(\"dataset\"))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -76,39 +89,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "eo3d93IzEVZz",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "%%capture\n",
-        "!unzip test.zip\n",
-        "!unzip train.zip\n",
-        "!mkdir dataset\n",
-        "!!mv train dataset/\n",
-        "!mv test dataset/\n",
-        "!rm train.zip\n",
-        "!rm test.zip"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Euz2vievEXlt",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!ls dataset/"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Wc67z13SAYMG",
         "colab_type": "code",
         "colab": {}
       },
@@ -167,7 +147,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o4OoFNIBrOIY",
+        "id": "Euz2vievEXlt",
         "colab_type": "code",
         "colab": {}
       },
@@ -185,7 +165,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8gCzRhMnmmIM",
+        "id": "Wc67z13SAYMG",
         "colab_type": "code",
         "colab": {}
       },
@@ -207,7 +187,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ucqr7l7dPEqv",
+        "id": "o4OoFNIBrOIY",
         "colab_type": "code",
         "colab": {}
       },
@@ -223,7 +203,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "a9_zSIbSmpcn",
+        "id": "8gCzRhMnmmIM",
         "colab_type": "code",
         "colab": {}
       },
@@ -237,7 +217,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0wV9Wqf61OeB",
+        "id": "ucqr7l7dPEqv",
         "colab_type": "code",
         "colab": {}
       },
@@ -250,7 +230,55 @@
         "    ax = fig.add_subplot(2, 20/2, idx+1, xticks=[], yticks=[])\n",
         "    img = np.transpose(np.squeeze(images[idx]))\n",
         "    ax.imshow(img)\n",
-        "print(\"\\n\\n\\n\",torch.max(labels[:,0,:],1))"
+        "print(\"\\n\\n\\n\",torch.max(labels[:,0,:],1))\n",
+        "print(labels.shape)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a9_zSIbSmpcn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class MyModel(nn.Module):\n",
+        "    def __init__(self, num_classes1, num_classes2):\n",
+        "        super(MyModel, self).__init__()\n",
+        "        self.model_resnet = torchvision.models.resnet50(pretrained=True)\n",
+        "        self.model_resnet.fc = nn.Linear(2048,1280,bias=True)\n",
+        "        self.dropout = nn.Dropout(p=0.2)\n",
+        "        self.fc1 = nn.Linear(1280, num_classes1,bias=True)\n",
+        "        torch.nn.init.xavier_uniform_(self.fc1.weight)\n",
+        "        torch.nn.init.zeros_(self.fc1.bias)\n",
+        "        self.fc2 = nn.Linear(1280, num_classes2,bias=True)\n",
+        "        torch.nn.init.xavier_uniform_(self.fc2.weight)\n",
+        "        torch.nn.init.zeros_(self.fc2.bias)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.model_resnet(x)\n",
+        "        drop = self.dropout(x)\n",
+        "        out1 = self.fc1(x)\n",
+        "        out2 = self.fc2(x)\n",
+        "        return out1, out2"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0wV9Wqf61OeB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "my_model = MyModel(10,10)\n",
+        "loss_fn = nn.CrossEntropyLoss()\n",
+        "opt = optim.SGD(my_model.parameters(),lr=0.01,momentum=0.9,nesterov=True)\n",
+        "my_model.to(device)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -263,9 +291,22 @@
         "colab": {}
       },
       "source": [
-        "vowel_model = torchvision.models.resnet50(pretrained=True)\n",
-        "cons_model = torchvision.models.resnet50(pretrained=True)\n",
-        "vowel_model"
+        "def evaluation(dataloader,model):\n",
+        "    total,correct=0,0\n",
+        "    for data in dataloader:\n",
+        "        inputs,labels=data\n",
+        "        inputs,labels=inputs.to(device),labels.to(device)\n",
+        "        out1,out2=my_model(inputs)\n",
+        "        _,pred1=torch.max(out1.data,1)\n",
+        "        _,pred2=torch.max(out2.data,1)\n",
+        "        _,labels1=torch.max(labels[:,0,:].data,1)\n",
+        "        _,labels2=torch.max(labels[:,1,:].data,1)\n",
+        "        total+=labels.size(0)\n",
+        "        fin1=(pred1==labels1)\n",
+        "        fin2=(pred2==labels2)\n",
+        "        \n",
+        "        correct+=(fin1==fin2).sum().item()\n",
+        "    return 100*correct/total"
       ],
       "execution_count": 0,
       "outputs": []
@@ -278,233 +319,43 @@
         "colab": {}
       },
       "source": [
-        "for param in vowel_model.parameters():\n",
-        "    param.requires_grad = False\n",
-        "for param in cons_model.parameters():\n",
-        "    param.requires_grad = False"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "diOwA6oS6Fc7",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "vowel_model.fc = nn.Linear(2048,10,bias=True)\n",
-        "cons_model.fc = nn.Linear(2048,10,bias=True)\n",
-        "print(vowel_model.fc)\n",
-        "print(cons_model.fc)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-QBjLMFuAD1u",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "x = np.linspace(0, 2 * np.pi, 400)\n",
-        "y = np.sin(x ** 2)\n",
-        "fig,(ax1,ax2,ax3) = plt.subplots(1,3,figsize=(20,5))\n",
-        "ax1.plot(x)\n",
-        "ax1.plot(y)\n",
-        "ax1.legend(['abc','def'])\n",
-        "ax2.plot(x)\n",
-        "ax2.plot(y)\n",
-        "ax2.legend(['abc','def'])\n",
-        "ax3.plot(x)\n",
-        "ax3.plot(y)\n",
-        "ax3.legend(['abc','def'])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ken0wfLYXmef",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "vowel_model.to(device)\n",
-        "cons_model.to(device)\n",
-        "loss_fn_v = nn.CrossEntropyLoss()\n",
-        "loss_fn_c =  nn.CrossEntropyLoss()\n",
-        "opt_V = optim.Adam(vowel_model.parameters())\n",
-        "opt_C = optim.Adam(cons_model.parameters())"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "MuotocZa3ek6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "try:\n",
-        "    epochs = 45\n",
-        "    total_trainloss = []\n",
-        "    total_valloss = []\n",
-        "    total_voweltrainacc = []\n",
-        "    total_vowelvalacc = []\n",
-        "    total_constrainacc = []\n",
-        "    total_consvalacc = []\n",
-        "    for i in tqdm_notebook(range(epochs)):\n",
-        "        train_loss = 0\n",
-        "        valid_loss = 0\n",
-        "        totalval_train = 0\n",
-        "        totalval_val = 0\n",
-        "        acc_Vtrain = 0\n",
-        "        acc_Ctrain = 0\n",
-        "        acc_Vvalid = 0\n",
-        "        acc_Cvalid = 0\n",
-        "        vowel_model.train()\n",
-        "        cons_model.train()\n",
-        "        for image,label in tqdm_notebook(train_loader):\n",
-        "            image, label = image.to(device), label.to(device)\n",
-        "            totalval_train+=64\n",
-        "            opt_V.zero_grad()\n",
-        "            opt_C.zero_grad()\n",
-        "            out_V = vowel_model(image)\n",
-        "            out_C = cons_model(image)\n",
-        "            val_V,ind_V = torch.max(label[:,0,:],1)\n",
-        "            val_C,ind_C = torch.max(label[:,1,:],1)\n",
-        "            _,pred_Vtrain = torch.max(out_V,1)\n",
-        "            _,pred_Ctrain = torch.max(out_C,1)\n",
-        "            acc_Vtrain += (pred_Vtrain==ind_V).sum().item()\n",
-        "            acc_Ctrain += (pred_Ctrain==ind_C).sum().item()\n",
-        "            loss = loss_fn_v(out_V,ind_V)+loss_fn_c(out_C,ind_C)\n",
-        "            train_loss += loss.item()*image.size(0)\n",
-        "            loss.backward()\n",
-        "            opt_V.step()\n",
-        "            opt_C.step()\n",
-        "            del image, label\n",
-        "        \n",
-        "        vowel_model.eval()\n",
-        "        cons_model.eval()\n",
-        "        for image,label in tqdm_notebook(validation_loader):\n",
-        "            totalval_val += 64\n",
-        "            image, label = image.to(device), label.to(device)\n",
-        "            V_out_V = vowel_model(image)\n",
-        "            V_out_C = cons_model(image)\n",
-        "            V_val_V,V_ind_V = torch.max(label[:,0,:],1)\n",
-        "            V_val_C,V_ind_C = torch.max(label[:,1,:],1)\n",
-        "            vloss = loss_fn_v(V_out_V,V_ind_V)+loss_fn_c(V_out_C,V_ind_C)\n",
-        "            valid_loss += vloss.item()*image.size(0)\n",
-        "            _,pred_Vvalid = torch.max(V_out_V,1)\n",
-        "            _,pred_Cvalid = torch.max(V_out_C,1)\n",
-        "            acc_Vvalid += (pred_Vvalid==V_ind_V).sum().item()\n",
-        "            acc_Cvalid += (pred_Cvalid==V_ind_C).sum().item()\n",
-        "        \n",
-        "        train_loss /= len(train_loader)\n",
-        "        valid_loss /= len(validation_loader)\n",
-        "        V_acc_train = acc_Vtrain/totalval_train * 100\n",
-        "        V_acc_valid = acc_Vvalid/totalval_val * 100\n",
-        "        C_acc_train = acc_Ctrain/totalval_train * 100\n",
-        "        C_acc_valid = acc_Cvalid/totalval_val * 100\n",
-        "        total_trainloss.append(train_loss)\n",
-        "        total_valloss.append(valid_loss)\n",
-        "        total_voweltrainacc.append(V_acc_train)\n",
-        "        total_vowelvalacc.append(V_acc_valid)\n",
-        "        total_constrainacc.append(C_acc_train)\n",
-        "        total_consvalacc.append(C_acc_valid)\n",
-        "\n",
-        "        print('Epoch: {} Train loss: {:.2f} Validation loss: {:.2f}'.format(i,train_loss,valid_loss))\n",
-        "        print('Epoch: {} For vowels: Train accuracy: {:.2f} Validation accuracy: {:.2f}'.format(i,V_acc_train,V_acc_valid))\n",
-        "        print('Epoch: {} For consonants: Train accuracy: {:.2f} Validation accuracy: {:.2f}'.format(i,C_acc_train,C_acc_valid))\n",
-        "\n",
-        "    torch.save(vowel_model.state_dict(), \"best_model_V.pth\")\n",
-        "    torch.save(cons_model.state_dict(), \"best_model_C.pth\")\n",
-        "    del out_V, out_C\n",
-        "    torch.cuda.empty_cache()\n",
-        "finally:\n",
-        "    fig,(ax1,ax2,ax3) = plt.subplots(1,3,figsize=(20,5))\n",
-        "    ax1.plot(total_trainloss)\n",
-        "    ax1.plot(total_valloss)\n",
-        "    ax1.legend(['Train Loss','Validation Loss'])\n",
-        "    ax1.set_title('Loss')\n",
-        "    ax2.plot(total_voweltrainacc)\n",
-        "    ax2.plot(total_constrainacc)\n",
-        "    ax2.legend(['Vowels','Consonants'])\n",
-        "    ax2.set_title('Training Accuracy')\n",
-        "    ax3.plot(total_vowelvalacc)\n",
-        "    ax3.plot(total_consvalacc)\n",
-        "    ax3.legend(['Vowels','Consonants'])\n",
-        "    ax3.set_title('Validation Accuracy')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "asi-OI8K5OBH",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "vowel_model.load_state_dict(torch.load(\"best_model_V.pth\"))\n",
-        "vowel_model.to(device)\n",
-        "vowel_model.eval()\n",
-        "\n",
-        "cons_model.load_state_dict(torch.load(\"best_model_C.pth\"))\n",
-        "cons_model.to(device)\n",
-        "cons_model.eval()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mruo8zsZMT3T",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "total=0\n",
-        "v=0\n",
-        "c=0\n",
-        "for data in tqdm_notebook(validation_loader,total=len(validation_loader),unit='batch'):\n",
-        "    images,labels = data\n",
-        "    images,labels = images.to(device),labels.to(device)\n",
-        "    _,out_v = torch.max(vowel_model(images),1)\n",
-        "    _,out_c = torch.max(cons_model(images),1)\n",
-        "    _,lab1 = torch.max(labels[:,0,:],1)\n",
-        "    _,lab2 = torch.max(labels[:,1,:],1)\n",
-        "    total += 64\n",
-        "    v += (out_v==lab1).sum().item()\n",
-        "    c += (out_c==lab2).sum().item()\n",
-        "print('total images:',total)\n",
-        "print('correct vowels predictions:',v)\n",
-        "print('correct consonants predictions:',c)\n",
-        "print('Vowel Accuracy: ',(v/total)*100, '%')\n",
-        "print('Consonants Accuracy: ',(c/total)*100,'%')\n",
-        "    "
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aN8sPrq4MEPh",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+        "loss_epoch_arr = []\n",
+        "loss_arr = []\n",
+        "min_loss = 1000\n",
+        "batch_size = 64\n",
+        "n_iters = np.ceil(9000/batch_size)\n",
+        "epochs = 45\n",
+        "for epoch in tqdm_notebook(range(epochs)):\n",
+        "    count = 0\n",
+        "    for i,data in enumerate(tqdm_notebook(train_loader),0):\n",
+        "        my_model.train()\n",
+        "        image,label = data\n",
+        "        image, label = image.to(device), label.to(device)\n",
+        "        opt.zero_grad()\n",
+        "        out = my_model.forward(image)\n",
+        "        _,ind_V = torch.max(label[:,0,:],1)\n",
+        "        _,ind_C = torch.max(label[:,1,:],1)\n",
+        "        loss1 = loss_fn(out[0],ind_V)\n",
+        "        loss2 = loss_fn(out[1],ind_C)\n",
+        "        loss = torch.add(loss1,loss2)\n",
+        "        loss.backward()\n",
+        "        opt.step()\n",
+        "        if min_loss > loss.item():\n",
+        "            min_loss = loss.item()\n",
+        "            best_model = copy.deepcopy(my_model.state_dict())\n",
+        "            print('Min loss %0.2f' % min_loss)\n",
+        "        if i % 100 == 0:\n",
+        "            print('Iteration: %d/%d, Loss: %0.2f' % (i, n_iters, loss.item()))\n",
+        "        del image, label, out\n",
+        "        torch.cuda.empty_cache()\n",
+        "        loss_arr.append(loss.item())\n",
+        "    print(\"Epoch number :\",epoch)\n",
+        "    print(\"Train Accuracy :\",evaluation(train_loader,my_model))\n",
+        "    print(\"Test Accuracy :\"  ,evaluation(validation_loader,my_model))\n",
+        "    loss_epoch_arr.append(loss.item())\n",
+        "    if epoch%10==0:\n",
+        "        plt.plot(loss_arr)\n",
+        "        plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
