--- a/project/HindiVowelClassification.ipynb
+++ b/project/HindiVowelClassification.ipynb
@@ -66,8 +66,8 @@
       },
       "source": [
         "if 'dataset' not in os.listdir():\n",
-        "    os.environ['KAGGLE_USERNAME'] = \"arohanajit232\" # username from the json file\n",
-        "    os.environ['KAGGLE_KEY'] = \"5289e13af33762d697c1d3c18c444f52\" # key from the json file\n",
+        "    os.environ['KAGGLE_USERNAME'] = \"xxxxxxxxxxxxx\" # username from the json file\n",
+        "    os.environ['KAGGLE_KEY'] = \"xxxxxxxxxxxx\" # key from the json file\n",
         "    os.system('kaggle competitions download -c padhai-hindi-vowel-consonant-classification')\n",
         "    with ZipFile('test.zip', 'r') as zipObj:\n",
         "        zipObj.extractall()\n",
@@ -276,6 +276,8 @@
       },
       "source": [
         "my_model = MyModel(10,10)\n",
+        "for param in my_model.model_resnet.parameters():\n",
+        "    param.requires_grad = False\n",
         "loss_fn = nn.CrossEntropyLoss()\n",
         "opt = optim.SGD(my_model.parameters(),lr=0.01,momentum=0.9,nesterov=True)\n",
         "my_model.to(device)"
@@ -324,7 +326,9 @@
         "min_loss = 1000\n",
         "batch_size = 64\n",
         "n_iters = np.ceil(9000/batch_size)\n",
-        "epochs = 45\n",
+        "epochs = 10\n",
+        "train_acc = []\n",
+        "validation_acc = []\n",
         "for epoch in tqdm_notebook(range(epochs)):\n",
         "    count = 0\n",
         "    for i,data in enumerate(tqdm_notebook(train_loader),0):\n",
@@ -349,13 +353,34 @@
         "        del image, label, out\n",
         "        torch.cuda.empty_cache()\n",
         "        loss_arr.append(loss.item())\n",
-        "    print(\"Epoch number :\",epoch)\n",
-        "    print(\"Train Accuracy :\",evaluation(train_loader,my_model))\n",
-        "    print(\"Test Accuracy :\"  ,evaluation(validation_loader,my_model))\n",
+        "    print(\"Epoch number :\",epoch+1)\n",
+        "    train_accuracy,test_accuracy = evaluation(train_loader,my_model),evaluation(validation_loader,my_model)\n",
+        "    train_acc.append(train_accuracy)\n",
+        "    validation_acc.append(test_accuracy)\n",
+        "    print(\"Train Accuracy :\",train_accuracy)\n",
+        "    print(\"Test Accuracy :\"  ,test_accuracy)\n",
         "    loss_epoch_arr.append(loss.item())\n",
         "    if epoch%10==0:\n",
         "        plt.plot(loss_arr)\n",
-        "        plt.show()"
+        "        plt.show()\n",
+        "plt.plot(train_acc)\n",
+        "plt.plot(validation_acc)\n",
+        "plt.legend(['Train Accuracy','Test Accuracy'])\n",
+        "plt.title('Accuracy Graph')\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3H1Vp2kSDYRa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
