--- a/project/HindiVowelClassification.ipynb
+++ b/project/HindiVowelClassification.ipynb
@@ -66,8 +66,8 @@
       },
       "source": [
         "if 'dataset' not in os.listdir():\n",
-        "    os.environ['KAGGLE_USERNAME'] = \"xxxxxxxxxxxxx\" # username from the json file\n",
-        "    os.environ['KAGGLE_KEY'] = \"xxxxxxxxxxxx\" # key from the json file\n",
+        "    os.environ['KAGGLE_USERNAME'] = \"arohanajit232\" # username from the json file\n",
+        "    os.environ['KAGGLE_KEY'] = \"5289e13af33762d697c1d3c18c444f52\" # key from the json file\n",
         "    os.system('kaggle competitions download -c padhai-hindi-vowel-consonant-classification')\n",
         "    with ZipFile('test.zip', 'r') as zipObj:\n",
         "        zipObj.extractall()\n",
@@ -278,6 +278,8 @@
         "my_model = MyModel(10,10)\n",
         "for param in my_model.model_resnet.parameters():\n",
         "    param.requires_grad = False\n",
+        "for param in my_model.model_resnet.fc.parameters():\n",
+        "    param.requires_grad = True\n",
         "loss_fn = nn.CrossEntropyLoss()\n",
         "opt = optim.SGD(my_model.parameters(),lr=0.01,momentum=0.9,nesterov=True)\n",
         "my_model.to(device)"
@@ -294,7 +296,7 @@
       },
       "source": [
         "def evaluation(dataloader,model):\n",
-        "    total,correct=0,0\n",
+        "    total,correct,temp1,temp2=0,0,0,0\n",
         "    for data in dataloader:\n",
         "        inputs,labels=data\n",
         "        inputs,labels=inputs.to(device),labels.to(device)\n",
@@ -306,8 +308,11 @@
         "        total+=labels.size(0)\n",
         "        fin1=(pred1==labels1)\n",
         "        fin2=(pred2==labels2)\n",
-        "        \n",
+        "        temp1+=(pred1==labels1).sum().item()\n",
+        "        temp2+=(pred2==labels2).sum().item()\n",
+        "\n",
         "        correct+=(fin1==fin2).sum().item()\n",
+        "    print('Accuracy of 1st metric: {} 2nd metric: {}'.format(100*temp1/total,100*temp2/total))\n",
         "    return 100*correct/total"
       ],
       "execution_count": 0,
@@ -360,14 +365,15 @@
         "    print(\"Train Accuracy :\",train_accuracy)\n",
         "    print(\"Test Accuracy :\"  ,test_accuracy)\n",
         "    loss_epoch_arr.append(loss.item())\n",
-        "    if epoch%10==0:\n",
-        "        plt.plot(loss_arr)\n",
-        "        plt.show()\n",
-        "plt.plot(train_acc)\n",
-        "plt.plot(validation_acc)\n",
-        "plt.legend(['Train Accuracy','Test Accuracy'])\n",
-        "plt.title('Accuracy Graph')\n",
-        "plt.show()"
+        "fig,(ax1,ax2,ax3) = plt.subplots(1,3,figsize=(20,5))\n",
+        "ax1.plot(loss_arr)\n",
+        "ax1.set_title('Overall Loss')\n",
+        "ax2.plot(loss_epoch_arr)\n",
+        "ax2.set_title('Loss per Epoch')\n",
+        "ax3.plot(train_acc)\n",
+        "ax3.plot(validation_acc)\n",
+        "ax3.legend(['Train Accuracy','Test Accuracy'])\n",
+        "ax3.set_title('Accuracy')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -375,7 +381,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3H1Vp2kSDYRa",
+        "id": "H7apWak2MPQ5",
         "colab_type": "code",
         "colab": {}
       },
