--- a/project/HindiVowelClassification.ipynb
+++ b/project/HindiVowelClassification.ipynb
@@ -3,11 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "HindiVowelClassification.ipynb",
+      "name": "Copy of HindiVowelClassification.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/arohanajit/hindi-alphabets-classification/blob/master/project/HindiVowelClassification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -52,6 +41,7 @@
         "import torchvision.transforms as transforms\n",
         "from tqdm import tqdm_notebook\n",
         "import copy\n",
+        "from collections import Counter\n",
         "train_on_gpu = torch.cuda.is_available()"
       ],
       "execution_count": 0,
@@ -152,12 +142,8 @@
         "colab": {}
       },
       "source": [
-        "transform1 = transforms.Compose([transforms.RandomRotation(30),\n",
-        "                                       transforms.RandomResizedCrop(224),\n",
-        "                                       transforms.RandomHorizontalFlip(),\n",
-        "                                       transforms.ToTensor(),\n",
-        "                                       transforms.Normalize([0.485, 0.456, 0.406], \n",
-        "                                                            [0.229, 0.224, 0.225])])"
+        "transform1 = transforms.Compose([transforms.ToTensor()])\n",
+        "\"../input/train/train\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -195,7 +181,14 @@
         "print(len(train_data))\n",
         "print(len(validation_data))\n",
         "print(len(full_data))\n",
-        "full_data.get_classes()"
+        "print(full_data.get_classes())\n",
+        "vclass,cclass=[],[]\n",
+        "for i in full_data.get_classes():\n",
+        "    if i[0]=='V':\n",
+        "        vclass.append(int(i[1]))\n",
+        "    else:\n",
+        "        cclass.append(int(i[1]))\n",
+        "print(vclass,cclass)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -239,30 +232,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "a9_zSIbSmpcn",
+        "id": "aCE8fdNE7fqJ",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "class MyModel(nn.Module):\n",
-        "    def __init__(self, num_classes1, num_classes2):\n",
-        "        super(MyModel, self).__init__()\n",
-        "        self.model_resnet = torchvision.models.resnet50(pretrained=True)\n",
-        "        self.model_resnet.fc = nn.Linear(2048,1280,bias=True)\n",
-        "        self.dropout = nn.Dropout(p=0.2)\n",
-        "        self.fc1 = nn.Linear(1280, num_classes1,bias=True)\n",
-        "        torch.nn.init.xavier_uniform_(self.fc1.weight)\n",
-        "        torch.nn.init.zeros_(self.fc1.bias)\n",
-        "        self.fc2 = nn.Linear(1280, num_classes2,bias=True)\n",
-        "        torch.nn.init.xavier_uniform_(self.fc2.weight)\n",
-        "        torch.nn.init.zeros_(self.fc2.bias)\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        x = self.model_resnet(x)\n",
-        "        drop = self.dropout(x)\n",
-        "        out1 = self.fc1(x)\n",
-        "        out2 = self.fc2(x)\n",
-        "        return out1, out2"
+        "vowelCounter = Counter()\n",
+        "consonantCounter =  Counter()\n",
+        "for _,label in train_loader:\n",
+        "    _,vowel = torch.max(label[:,0,:],1)\n",
+        "    _,consonant = torch.max(label[:,1,:],1)\n",
+        "    vowelCounter.update(vowel.tolist())\n",
+        "    consonantCounter.update(consonant.tolist())"
       ],
       "execution_count": 0,
       "outputs": []
@@ -270,19 +251,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0wV9Wqf61OeB",
+        "id": "_g2OAx5F9FhE",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "my_model = MyModel(10,10)\n",
-        "for param in my_model.model_resnet.parameters():\n",
-        "    param.requires_grad = False\n",
-        "for param in my_model.model_resnet.fc.parameters():\n",
-        "    param.requires_grad = True\n",
-        "loss_fn = nn.CrossEntropyLoss()\n",
-        "opt = optim.SGD(my_model.parameters(),lr=0.01,momentum=0.9,nesterov=True)\n",
-        "my_model.to(device)"
+        "print(vowelCounter)\n",
+        "print(consonantCounter)\n",
+        "vvalues,cvalues=[],[]\n",
+        "for i in vclass:\n",
+        "    vvalues.append(vowelCounter[i])\n",
+        "for i in cclass:\n",
+        "    cvalues.append(consonantCounter[i])\n",
+        "print(vclass,vvalues)\n",
+        "print(cclass,cvalues)\n",
+        "fig,(ax1,ax2) = plt.subplots(1,2,figsize=(20,5))\n",
+        "ax1.bar(vclass,vvalues)\n",
+        "ax1.set_title('Vowel class distribution')\n",
+        "ax2.bar(cclass,cvalues)\n",
+        "ax2.set_title('Consonant class distribution')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -290,30 +277,59 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-gIv4kB1m-OC",
+        "id": "zorkwEmC0F0L",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def evaluation(dataloader,model):\n",
-        "    total,correct,temp1,temp2=0,0,0,0\n",
+        "v_model = torchvision.models.resnet50(pretrained=True)\n",
+        "c_model = torchvision.models.resnet50(pretrained=True)\n",
+        "v_model.fc = nn.Linear(2048,10,bias=True)\n",
+        "c_model.fc = nn.Linear(2048,10,bias=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xlhlWpjf0Sp0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "opt_v = optim.Adam(v_model.parameters())\n",
+        "opt_c = optim.Adam(c_model.parameters())\n",
+        "loss_fnv = nn.CrossEntropyLoss()\n",
+        "loss_fnc = nn.CrossEntropyLoss()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jow2CbZLMNzG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def evaluation(dataloader,vmodel,cmodel):\n",
+        "    total,correctv,correctc=0,0,0\n",
         "    for data in dataloader:\n",
         "        inputs,labels=data\n",
         "        inputs,labels=inputs.to(device),labels.to(device)\n",
-        "        out1,out2=my_model(inputs)\n",
-        "        _,pred1=torch.max(out1.data,1)\n",
-        "        _,pred2=torch.max(out2.data,1)\n",
-        "        _,labels1=torch.max(labels[:,0,:].data,1)\n",
-        "        _,labels2=torch.max(labels[:,1,:].data,1)\n",
+        "        _,outv = torch.max(vmodel(inputs),1)\n",
+        "        _,outc = torch.max(cmodel(inputs),1)\n",
+        "        _,labelsv=torch.max(labels[:,0,:].data,1)\n",
+        "        _,labelsc=torch.max(labels[:,1,:].data,1)\n",
         "        total+=labels.size(0)\n",
-        "        fin1=(pred1==labels1)\n",
-        "        fin2=(pred2==labels2)\n",
-        "        temp1+=(pred1==labels1).sum().item()\n",
-        "        temp2+=(pred2==labels2).sum().item()\n",
-        "\n",
-        "        correct+=(fin1==fin2).sum().item()\n",
-        "    print('Accuracy of 1st metric: {} 2nd metric: {}'.format(100*temp1/total,100*temp2/total))\n",
-        "    return 100*correct/total"
+        "        correctv+=(outv==labelsv).sum().item()\n",
+        "        correctc+=(outc==labelsc).sum().item()\n",
+        "        vacc = 100*correctv/total\n",
+        "        cacc = 100*correctc/total\n",
+        "        \n",
+        "    return vacc,cacc"
       ],
       "execution_count": 0,
       "outputs": []
@@ -321,59 +337,88 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CaEHaeHu53fu",
+        "id": "SEIUIUsLdu4z",
         "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def Graphing(loss_arr,loss_epoch_arr,trainv_acc,trainc_acc,valv_acc,valc_acc):\n",
+        "    fig,(axes) = plt.subplots(2,2,figsize=(20,5))\n",
+        "    axes[0,0].plot(loss_arr)\n",
+        "    axes[0,0].set_title('Overall Loss')\n",
+        "    axes[0,1].plot(loss_epoch_arr)\n",
+        "    axes[0,1].set_title('Loss per Epoch')\n",
+        "    axes[1,0].plot(trainv_acc)\n",
+        "    axes[1,0].plot(trainc_acc)\n",
+        "    axes[1,0].legend(['Vowel','Consonant'])\n",
+        "    axes[1,0].set_title('Train Accuracy')\n",
+        "    axes[1,1].plot(valv_acc)\n",
+        "    axes[1,1].plot(valc_acc)\n",
+        "    axes[1,1].legend(['Vowel','Consonant'])\n",
+        "    axes[1,1].set_title('Validation Accuracy')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "q6nTE7Ue6P8t",
         "colab": {}
       },
       "source": [
         "loss_epoch_arr = []\n",
         "loss_arr = []\n",
-        "min_loss = 1000\n",
         "batch_size = 64\n",
         "n_iters = np.ceil(9000/batch_size)\n",
-        "epochs = 10\n",
-        "train_acc = []\n",
-        "validation_acc = []\n",
+        "epochs = 45\n",
+        "min_loss = 100000\n",
+        "v_model.to(device)\n",
+        "c_model.to(device)\n",
+        "trainv_acc = []\n",
+        "trainc_acc = []\n",
+        "valv_acc = []\n",
+        "valc_acc = []\n",
         "for epoch in tqdm_notebook(range(epochs)):\n",
-        "    count = 0\n",
         "    for i,data in enumerate(tqdm_notebook(train_loader),0):\n",
-        "        my_model.train()\n",
+        "        v_model.train()\n",
+        "        c_model.train()\n",
         "        image,label = data\n",
         "        image, label = image.to(device), label.to(device)\n",
-        "        opt.zero_grad()\n",
-        "        out = my_model.forward(image)\n",
-        "        _,ind_V = torch.max(label[:,0,:],1)\n",
-        "        _,ind_C = torch.max(label[:,1,:],1)\n",
-        "        loss1 = loss_fn(out[0],ind_V)\n",
-        "        loss2 = loss_fn(out[1],ind_C)\n",
-        "        loss = torch.add(loss1,loss2)\n",
+        "        opt_v.zero_grad()\n",
+        "        opt_c.zero_grad()\n",
+        "        out_v = v_model(image)\n",
+        "        out_c = c_model(image)\n",
+        "        _,ind_v = torch.max(label[:,0,:],1)\n",
+        "        _,ind_c = torch.max(label[:,1,:],1)\n",
+        "        loss_v = loss_fnv(out_v,ind_v)\n",
+        "        loss_c = loss_fnc(out_c,ind_c)\n",
+        "        loss = torch.add(loss_v,loss_c)\n",
         "        loss.backward()\n",
-        "        opt.step()\n",
+        "        opt_v.step()\n",
+        "        opt_c.step()\n",
         "        if min_loss > loss.item():\n",
         "            min_loss = loss.item()\n",
-        "            best_model = copy.deepcopy(my_model.state_dict())\n",
+        "            best_modelv = copy.deepcopy(v_model.state_dict())\n",
+        "            best_modelc = copy.deepcopy(c_model.state_dict())\n",
         "            print('Min loss %0.2f' % min_loss)\n",
         "        if i % 100 == 0:\n",
         "            print('Iteration: %d/%d, Loss: %0.2f' % (i, n_iters, loss.item()))\n",
-        "        del image, label, out\n",
+        "        del image, label, out_v,out_c\n",
         "        torch.cuda.empty_cache()\n",
         "        loss_arr.append(loss.item())\n",
-        "    print(\"Epoch number :\",epoch+1)\n",
-        "    train_accuracy,test_accuracy = evaluation(train_loader,my_model),evaluation(validation_loader,my_model)\n",
-        "    train_acc.append(train_accuracy)\n",
-        "    validation_acc.append(test_accuracy)\n",
-        "    print(\"Train Accuracy :\",train_accuracy)\n",
-        "    print(\"Test Accuracy :\"  ,test_accuracy)\n",
         "    loss_epoch_arr.append(loss.item())\n",
-        "fig,(ax1,ax2,ax3) = plt.subplots(1,3,figsize=(20,5))\n",
-        "ax1.plot(loss_arr)\n",
-        "ax1.set_title('Overall Loss')\n",
-        "ax2.plot(loss_epoch_arr)\n",
-        "ax2.set_title('Loss per Epoch')\n",
-        "ax3.plot(train_acc)\n",
-        "ax3.plot(validation_acc)\n",
-        "ax3.legend(['Train Accuracy','Test Accuracy'])\n",
-        "ax3.set_title('Accuracy')"
+        "    print(\"Epoch: {}\".format(epoch))\n",
+        "    tempv,tempc = evaluation(train_loader,v_model,c_model)\n",
+        "    trainv_acc.append(tempv)\n",
+        "    trainc_acc.append(tempc)\n",
+        "    print(\"Train Accuarcy: Vowel: {} Consonants: {}\".format(tempv,tempc))\n",
+        "    tempv,tempc = evaluation(validation_loader,v_model,c_model)\n",
+        "    valv_acc.append(tempv)\n",
+        "    valc_acc.append(tempc)\n",
+        "    print(\"Validation Accuarcy: Vowel: {} Consonants: {}\".format(tempv,tempc))\n",
+        "Graphing(loss_arr,loss_epoch_arr,trainv_acc,trainc_acc,valv_acc,valc_acc)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -381,7 +426,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H7apWak2MPQ5",
+        "id": "o78PffQpOj0V",
         "colab_type": "code",
         "colab": {}
       },
