--- a/project/HindiVowelClassification.ipynb
+++ b/project/HindiVowelClassification.ipynb
@@ -6,7 +6,8 @@
       "name": "Copy of HindiVowelClassification.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/arohanajit/hindi-alphabets-classification/blob/master/project/HindiVowelClassification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -56,18 +67,10 @@
       },
       "source": [
         "if 'dataset' not in os.listdir():\n",
-        "    os.environ['KAGGLE_USERNAME'] = \"arohanajit232\" # username from the json file\n",
-        "    os.environ['KAGGLE_KEY'] = \"5289e13af33762d697c1d3c18c444f52\" # key from the json file\n",
-        "    os.system('kaggle competitions download -c padhai-hindi-vowel-consonant-classification')\n",
-        "    with ZipFile('test.zip', 'r') as zipObj:\n",
-        "        zipObj.extractall()\n",
-        "    with ZipFile('train.zip', 'r') as zipObj:\n",
-        "        zipObj.extractall()\n",
-        "    os.mkdir('dataset')\n",
-        "    shutil.move('train','dataset/')\n",
-        "    shutil.move('test','dataset/')\n",
-        "    os.remove('train.zip')\n",
-        "    os.remove('test.zip')\n",
+        "    os.system('wget https://raw.githubusercontent.com/arohanajit/hindi-alphabets-classification/master/project/dataset.zip')\n",
+        "    with ZipFile('dataset.zip','r') as zip:\n",
+        "        zip.extractall()\n",
+        "    os.remove('dataset.zip')\n",
         "    print(os.listdir(\"dataset\"))\n",
         "else:\n",
         "    print(\"Dataset already present!\",os.listdir(\"dataset\"))"
